# imbuelight-stair-move-sensor-firmware

./: CMakeLists.txt  LICENSE  README.md  imbuelight-move-controller.code-workspace  prj.conf
boards/arm/move_sensor_board/: Kconfig.board  Kconfig.defconfig  board.cmake  move_sensor_board.dts  move_sensor_board.yaml  move_sensor_board_defconfig
src/: adc.c  adc.h  distance_sensor.c  distance_sensor.h  imbuelight-stair-move-sensor-firmware.code-workspace  infrared_pd_manager.h  ir_sensor.c  ir_sensor.h  logic.c  logic.h  main.c  settings.c  settings.h  utils.c  utils.h
src/boards/arm/move_sensor/: Kconfig.board  Kconfig.defconfig  move_sensor.dts  move_sensor.yaml  move_sensor_defconfig
